# atlas-mercator

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
data/: faq_kb.jsonl  orders.json  products.json
data/competitor_pages/: amazon_bestseller_earbuds.html  ebay_deal_watch.html  shopify_niche_brand.html
data/policy_docs/: returns.md  shipping.md  warranty.md
docs/: agent-design.md  architecture.md  roadmap.md
examples/demo_screenshots/: README.md
examples/transcripts/: wf_customer_escalation.md  wf_new_market_launch.md
scripts/: build_kb_index.py  run_demo.sh
src/atlas_mercator/: __init__.py  cli.py  config.py
src/atlas_mercator/agents/: __init__.py  base.py  intel_scout.py  listing_optimizer.py  marketing_copilot.py  support_agent.py
src/atlas_mercator/llm/: __init__.py  client.py
src/atlas_mercator/observability/: __init__.py  tracer.py
src/atlas_mercator/orchestrator/: __init__.py  graph.py  router.py  workflows.py
src/atlas_mercator/prompts/: __init__.py  intel_scout.py  listing_optimizer.py  marketing_copilot.py  orchestrator.py  support_agent.py
src/atlas_mercator/rag/: __init__.py  indexer.py  retriever.py  tfidf_embedder.py
src/atlas_mercator/schemas/: __init__.py  intent.py  order.py  product.py  tool_io.py
src/atlas_mercator/tools/: __init__.py  base.py  competitor_tool.py  kb_tool.py  keyword_tool.py  product_tools.py  support_tools.py  translate_tool.py
src/atlas_mercator/web/: __init__.py  gradio_app.py
tests/: conftest.py  test_agents_listing.py  test_agents_sub.py  test_orchestrator.py  test_orchestrator_graph.py  test_rag_retriever.py  test_schemas_cli.py  test_tools_misc.py  test_tools_product.py  test_translate_keyword.py
tests/agents/: __init__.py
tests/tools/: __init__.py
